# Task_Miner

./: .gitignore
app/: .gitignore  Home.py  README.md  pyproject.toml
app/core/: RAG_database.py  database.py  email_parser.py  llm_manager.py  models.py  prompt_manager.py  show_models.py  show_prompts.py
app/pages/: 1_Dashboard.py
app/prompts/: README.md  create_baseline_prompts.py  prompts.yaml
app/users/: config.yaml
